# novareap

./: .cache  .gitignore  LICENSE  README.md  novareap.py  pyproject.toml  requirements.txt  wizard.py
novareap/: __init__.py  cli.py
