[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novareap"
version = "0.1.0"
description = "A high-quality music downloader for Tidal, Spotify, and Apple Music."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "rich>=13.0.0",
    "mutagen>=1.47.0",
    "spotipy>=2.20.0",
    "tidalapi>=0.7.0",
    "yt-dlp>=2023.0.0",
]

[project.scripts]
novareap = "novareap.cli:cli"

[tool.setuptools.packages.find]
include = ["novareap*"]
